# gmm-divergence

./: .gitignore  LICENSE  README.md  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  pypi.yml  testpypi.yml
docs/: fit_weights.md  getting_started.md  index.md  kl_estimation.md
docs/get_started/: fit_weights.md  kl_estimation.md
docs/javascripts/: mathjax.js
docs/reference/: covariance.md  distribution_details.md  distributions.md  divergence.md  fit_configuration.md  fit_weights.md  fitting.md  index.md  kl_based_estimators.md  kl_configuration.md  kl_estimators.md  results.md  root.md  sampling.md
examples/: data32dim.npz  klfit.py  weight_fitting_2d.py
src/gmm_divergence/: __init__.py  _dispatch.py  divergence.py  fit.py  formatting.py  results.py  sampling.py  typing.py  utils.py  weights.py
src/gmm_divergence/_core/: _dispatch.py  _numeric.py  _sampling.py  _types.py  _validation.py
src/gmm_divergence/covariance/: __init__.py  _api.py  _epsilon.py  _options.py  _regularize.py  _shape.py
src/gmm_divergence/distribution/: __init__.py  base.py  combine.py  gaussian.py  gmm.py
src/gmm_divergence/distributions/: __init__.py  _base.py  _combine.py  _gaussian.py  _mixture.py
src/gmm_divergence/divergence/: __init__.py  _api.py  _options.py
src/gmm_divergence/divergence/methods/: __init__.py  _closed_form.py  _gaussian_approx.py  _monte_carlo.py  _unscented.py  _variational.py
src/gmm_divergence/estimators/: __init__.py  _components.py  closed_form.py  exact.py  gaussian_approx.py  monte_carlo.py  unscented.py
src/gmm_divergence/fit/: constrained.py
src/gmm_divergence/fitting/: __init__.py  _api.py  _fit.py  _objective.py  _objectives.py  _options.py  _selector.py  _weights.py  config.py  constrained.py  weights.py
src/gmm_divergence/gmm/: __init__.py  density.py  model.py  sampling.py
src/gmm_divergence/methods/: __init__.py  _components.py  exact.py  gaussian_approx.py  monte_carlo.py  unscented.py
tests/: test_anlytical.py  test_benchmarks.py  test_covariance.py  test_distributions.py  test_docs.py  test_fitting.py  test_kl_estimators.py  test_public_api.py  test_validation.py  test_weight_fitting.py
tests/benchmarks/: test_benchmark.py
